proyecto entero con SASS

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,5 +7,7 @@
 }
 @import './sections/header';
 @import './sections/index';
-@import './sections/footer';
+@import './sections/sobrenosotros';
+@import './sections/trabajos';
 @import './media/responsive';
+@import './sections/footer';
