--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,86 @@
         font-weight: 300;
         text-align: center; }
 
+.informacion-gn {
+  margin: 50px auto;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.212);
+  padding: 55px 45px; }
+  .informacion-gn .informacion-gn__items h2 {
+    font-size: 2.3em;
+    color: #F2B157; }
+  .informacion-gn .informacion-gn__items p {
+    font-size: 1.8em;
+    font-weight: lighter;
+    line-height: 1;
+    margin-left: 10px; }
+  .informacion-gn .informacion-gn__items img {
+    max-width: 180px;
+    display: block;
+    border-radius: 15px;
+    margin: 0 auto; }
+
+.informacion-gn h2 {
+  line-height: .8;
+  color: #F2B157;
+  font-size: 2.3em; }
+
+.informacion-gn p {
+  margin-top: 10px;
+  line-height: .8;
+  font-size: 1.8em;
+  font-weight: lighter;
+  margin-bottom: 30px;
+  text-align: justify;
+  margin-right: 8px; }
+
+.informacion-gn .row .col-lg-9 .carousel .carousel-inner .carousel-item .imgMuestra {
+  border-radius: 10px;
+  max-width: 80vw; }
+
+@media (max-width: 1024px) {
+  .navbar .navbar__div {
+    line-height: 1; }
+    .navbar .navbar__div .hide {
+      display: none; }
+  .container-fluid .backgroundOpaco__img {
+    background-size: cover; } }
+
+@media (max-width: 992px) {
+  .navbar-light .navbar__div {
+    height: auto; }
+    .navbar-light .navbar__div .logotipo {
+      height: 23px;
+      width: 23px;
+      margin-bottom: 11px; }
+    .navbar-light .navbar__div .navbar-brand {
+      font-size: 2em; }
+    .navbar-light .navbar__div .navbar-toggler {
+      font-size: 1.1rem;
+      margin-bottom: 5px;
+      padding: 7px; }
+  .container-fluid .informacion {
+    padding: 40px 15px; }
+    .container-fluid .informacion .tarjeta {
+      max-width: 100%; } }
+
+@media (max-width: 768px) {
+  .informacion-gn .informacion-gn__items img {
+    max-width: 80vw;
+    margin-top: 20px; } }
+
+@media (max-width: 425px) {
+  .navbar-light .navbar__div .logotipo {
+    height: 22px;
+    width: 22px;
+    margin-bottom: 11px; }
+  .navbar-light .navbar__div .navbar-brand {
+    font-size: 1.5em; }
+  .navbar-light .navbar__div .navbar-toggler {
+    font-size: 1rem;
+    margin-bottom: 5px;
+    padding: 6px; } }
+
 .footerDiv {
   height: auto;
   background-color: #6B7986;
@@ -143,41 +223,3 @@
   background-color: #6B7986;
   color: white;
   font-weight: lighter; }
-
-@media (max-width: 1024px) {
-  .navbar .navbar__div {
-    line-height: 1; }
-    .navbar .navbar__div .hide {
-      display: none; }
-  .container-fluid .backgroundOpaco__img {
-    background-size: cover; } }
-
-@media (max-width: 992px) {
-  .navbar-light .navbar__div {
-    height: auto; }
-    .navbar-light .navbar__div .logotipo {
-      height: 23px;
-      width: 23px;
-      margin-bottom: 11px; }
-    .navbar-light .navbar__div .navbar-brand {
-      font-size: 2em; }
-    .navbar-light .navbar__div .navbar-toggler {
-      font-size: 1.1rem;
-      margin-bottom: 5px;
-      padding: 7px; }
-  .container-fluid .informacion {
-    padding: 40px 15px; }
-    .container-fluid .informacion .tarjeta {
-      max-width: 100%; } }
-
-@media (max-width: 425px) {
-  .navbar-light .navbar__div .logotipo {
-    height: 22px;
-    width: 22px;
-    margin-bottom: 11px; }
-  .navbar-light .navbar__div .navbar-brand {
-    font-size: 1.5em; }
-  .navbar-light .navbar__div .navbar-toggler {
-    font-size: 1rem;
-    margin-bottom: 5px;
-    padding: 6px; } }
