--- a/scss/media/_responsive.scss
+++ b/scss/media/_responsive.scss
@@ -41,6 +41,16 @@
         }
     }
 }
+@media (max-width:768px) {
+    .informacion-gn{
+        .informacion-gn__items{
+                img{
+                    max-width: 80vw;
+                    margin-top:20px;
+                }
+        }
+    }
+}
 @media (max-width:425px) {
     .navbar-light{
         .navbar__div{
