--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
     text-decoration: none;
     font-family:Dongle,sans-serif;
 }
+@import './sections/mme';
 @import './sections/header';
 @import './sections/index';
 @import './sections/sobrenosotros';
