--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -36,12 +36,7 @@
         padding:40px 30px;
         background-color: rgb(248, 246, 246);
         .tarjeta{
-            box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.281);
-            border-radius: 20px;
-            height: auto;
-            padding:30px;
-            margin:15px;
-            max-width: 25vw;
+            @extend %estilosTarjetas;
             h3{
                 font-size: 40px;
                 text-align: center;
@@ -51,9 +46,10 @@
             }
             p{
                 max-width:fit-content;
-                font-size: 30px;
-                line-height: .8;
-                font-weight: 300;
+                @include fontStyle(30px,0.8,300);
+                // font-size: 30px;
+                // line-height: .8;
+                // font-weight: 300;
                 text-align: center;
             }
         }
