--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,5 +10,6 @@
 @import './sections/index';
 @import './sections/sobrenosotros';
 @import './sections/trabajos';
+@import './sections/contacto';
 @import './media/responsive';
 @import './sections/footer';
