--- a/scss/media/_responsive.scss
+++ b/scss/media/_responsive.scss
@@ -83,3 +83,24 @@
         }
     }
 }
+@media (max-width:321px) {
+    .navbar-light{
+        .navbar__div{
+            .logotipo{
+                height: 20px;
+                width: 20px;
+                margin-bottom: 9px;
+            }
+            .navbar-brand{
+               h1{
+                   font-size: 0.6em;
+                   margin-right: 3px;
+                }
+            }
+            .navbar-toggler{
+                font-size: .8rem;
+                margin-bottom: 5px;
+            }
+        }
+    }
+}
