--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -16,7 +16,7 @@
         p{
             color: white;
             font-size:1.5em;
-            margin: 0;
+            margin: 2px 0 0 0;
             font-weight: lighter;
             padding-top: 8px;
         }
@@ -32,6 +32,7 @@
 }
 
 .copy{
+    padding-top: 10px;
     font-size: 1.1em;
     line-height: .8;
     background-color: #6B7986;
